custom: [bugfix] adjust spacing in author-bio

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -2,6 +2,11 @@
    Site wide styles
    ========================================================================== */
 
+/* Utilities and Helpers */
+
+.mrs { margin-right: 5px; }
+
+
 /*
    Selection
    ========================================================================== */
